@@ -12,6 +12,7 @@ release 0.14.7
 	  was received
 	* fixed incorrect error when deleting files from a torrent where
 	  not all files have been created
+	* announces torrents immediately to the DHT when it's started
 
 release 0.14.6
 
